# celeste-src

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.rst  COPYRIGHT.rst  Cargo.toml  LICENSE  LICENSE-MIT  LICENSE.ISC  LICENSE.rst  README.md  README.rst
.cargo/: config.toml
contrib/: CMakeLists.txt  README.rst
contrib/byacc/: CELESTE-Xlist  CELESTE-upgrade
contrib/one-true-awk/: CELESTE-upgrade
contrib/zlib/: CELESTE-Xlist  CELESTE-upgrade  crc32.c  gzlib.c  gzread.c  gzwrite.c  infback.c  inflate.c  trees.c  zconf.h  zutil.c
contrib/zlib/test/: example.c  infcover.c  minigzip.c
linux/: CELESTE-Xlist  CELESTE-upgrade
linux/arch/powerpc/asm/: perf_regs.h
linux/include/linux/: ip.h  ipv6.h  version.h
usr/: CMakeLists.txt  README.rst
usr/include/: CelesteC.h  celeste_def.h
usr/lib/: CMakeLists.txt
usr/lib/bz2/: CMakeLists.txt
usr/lib/lzma/: CMakeLists.txt  config.h
usr/lib/util/: CMakeLists.txt  CelesteUtil.h  progname.c  strtonum.c
usr/lib/z/: CMakeLists.txt
